--- a/layouts/partials/comunicat/relacionats.html
+++ b/layouts/partials/comunicat/relacionats.html
@@ -8,26 +8,25 @@
               <td class="content-text">
                 <table border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td style="padding: 20px 0px 0px 20px;background-color: #fff">
+		    <td style="padding: 20px 0px 0px 0px;background-color: #fff">
+		      {{ $imgurl := print "/img/how-to.png" }}<img src="{{ $imgurl }}" />				         
+		    </td>
+                    <td width="100%" style="padding: 20px 0px 0px 10px;background-color: #fff">
                       <h2 style="font-family:Open Sans, sans-serif; color: #333; font-size: 20px; text-decoration: none; font-weight: 600;">
                        HowTo's Frameworks i Solucions d'Arquitectura
                       </h2>
                     </td>
                   </tr>
                   <tr>
-                    <td class="content-text">
+                    <td class="content-text" colspan="2">
                       <table>
                         <tr>
                           <td style="font-family:Open Sans, sans-serif; color: #666; font-size: 14px; line-height:17px">
-                            <ul style="padding-left: 32px;" class="download_pdf">
+                            <ul style="padding-left: 32px;">
                               {{ range .Params.relacionats }}
                               <li style="color: #cc3333;">
                                 <p style="font-family:Open Sans, sans-serif; font-size: 14px; color: #333; font-weight:600">
                                   {{ .doctitle }}
-                                  {{ $imgurl := print "/img/ico_descarregable_" .doctype ".png" }}
-                                  <a href="{{ .docurl }}" target="_blank">
-                                    <img src="{{ $imgurl }}" />
-                                  </a>
                                   <br />
                                   <span style="font-family:Open Sans, sans-serif; font-size: 14px; color: #333; font-weight:300">
                                     {{ .docdescription }}
@@ -37,7 +36,7 @@
                               {{ end }}
                             </ul>
                           </td>
-						</tr>
+				</tr>
                       </table>
                     </td>
                   </tr>
