--- a/layouts/partials/comunicat/relacionats.html
+++ b/layouts/partials/comunicat/relacionats.html
@@ -26,7 +26,7 @@
                               {{ range .Params.relacionats }}
                               <li style="color: #cc3333;">
                                 <p style="font-family:Open Sans, sans-serif; font-size: 14px; color: #333; font-weight:600">
-				  <a href="{{ .docurl }}" target="_blank">
+				  <a href="{{ .docurl }}" style="color: #333" target="_blank">
                                     {{ .doctitle }}
                                   </a>
 
