--- a/layouts/partials/comunicat/style.html
+++ b/layouts/partials/comunicat/style.html
@@ -193,6 +193,17 @@
         text-decoration: none;
   }
   
+  td.llegiu_mes > a:hover {
+    color: #ffffff; 
+    text-decoration: none;
+  }
+  
+  td.llegiu_mes > a:visited {
+    color: #ffffff; 
+    text-decoration: none;
+  }
+  
+  
   td.avis_legal {
     font-family:Open Sans, sans-serif;
     font-size: 10px;
