--- a/layouts/partials/comunicat/style.html
+++ b/layouts/partials/comunicat/style.html
@@ -49,7 +49,7 @@
   .subhead {
     font-size: 15px;
     color: #ffffff;
-    font-family: sans-serif;
+    font-family: 'OpenSansRegular';
     letter-spacing: 10px;
   }
   
@@ -57,7 +57,7 @@
   .h2,
   .bodycopy {
     color: #153643;
-    font-family: sans-serif;
+    font-family: 'OpenSansRegular';
   }
   
   .h1 {
@@ -95,7 +95,7 @@
   }
   
   .footercopy {
-    font-family: sans-serif;
+    font-family: 'OpenSansRegular';
     font-size: 14px;
     color: #ffffff;
   }
@@ -181,14 +181,14 @@
     background-color: #333333;
     text-align: center;
     font-size: 14px;
-    font-family: OpenSansRegular, Open Sans, sans-serif;
+    font-family: 'OpenSansRegular', Open Sans, sans-serif;
     padding: 0 10px 0 10px;
     height: 25px;
     width: 125px;
   }
   
   td.llegiu_mes > a {
-        font-family: OpenSansRegular, Open Sans, sans-serif;
+        font-family: 'OpenSansRegular', Open Sans, sans-serif;
         color: #ffffff; 
         text-decoration: none;
   }
@@ -205,7 +205,7 @@
   
   
   td.avis_legal {
-    font-family:Open Sans, sans-serif;
+    font-family:'OpenSansRegular', sans-serif;
     font-size: 10px;
     padding:0px;
     color:#656565;
