--- a/layouts/partials/comunicat/noticia.html
+++ b/layouts/partials/comunicat/noticia.html
@@ -21,8 +21,8 @@
               <td style="padding:5px 20px 15px 25px">
                 <table border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td class="llegiu_mes">
-                      <a href="{{ .RelPermalink }}">Llegiu més</a>
+                    <td class="llegiu_mes" style="background-color: #333333;text-align: center;font-size: 14px;padding: 0 10px 0 10px; height: 25px; width: 125px;">
+                      <a href="{{ .RelPermalink }}" style="text-decoration: none">Llegiu més</a>
                     </td>
                   </tr>
                 </table>
