--- a/layouts/partials/comunicat/noticia.html
+++ b/layouts/partials/comunicat/noticia.html
@@ -21,7 +21,7 @@
               <td style="padding:5px 20px 15px 25px">
                 <table border="0" cellspacing="0" cellpadding="0">
                   <tr>
-                    <td class="llegiu_mes" style="background-color: #333333;text-align: center;font-size: 14px;padding: 0 10px 0 10px; height: 25px; width: 125px;">
+                    <td class="llegiu_mes" style="background-color: #333333;text-align: center;color: #ffffff; font-family: Open Sans, sans-serif;font-size: 14px;padding: 0 10px 0 10px; height: 25px; width: 125px;">
                       <a href="{{ .RelPermalink }}" style="text-decoration: none;color=#ffffff;">Llegiu més</a>
                     </td>
                   </tr>
