Correcció de enllaços de llegiu més

--- a/layouts/partials/comunicat/noticia.html
+++ b/layouts/partials/comunicat/noticia.html
@@ -22,7 +22,7 @@
                 <table border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td class="llegiu_mes" style="background-color: #333333;text-align: center;color: #ffffff; font-family: Open Sans, sans-serif;font-size: 14px;padding: 0 10px 0 10px; height: 25px; width: 125px;">
-                      <a href="{{ .RelPermalink }}" style="text-decoration: none;color=#ffffff;">Llegiu més</a>
+                      <a href="{{ .RelPermalink }}" style="color: #bf0000;text-decoration: none;font-weight:600">Llegiu més</a>
                     </td>
                   </tr>
                 </table>
