Correcció final de bloc per blog

--- a/layouts/partials/header_block.html
+++ b/layouts/partials/header_block.html
@@ -69,7 +69,7 @@
 										<label class="hidden" for="cerca">Cerca</label>
 										<input type="search" name="q" id="cerca"
 											title="Introdu&iuml;u les paraules a cercar"
-											class="form-control" placeholder="Cerca al bloc" /> 
+											class="form-control" placeholder="Cerca al blog" /> 
 										<span class="btn btn-default hidden-xs" onclick="$('#cercadorIndex').submit()"></span>
 										<button class="btn btn-default visible-xs" title="Neteja" type="button"></button>
 									</div>								
