--- a/layouts/partials/titles_subsection.html
+++ b/layouts/partials/titles_subsection.html
@@ -25,5 +25,5 @@
 
 <!-- Bloc d'Arquitectura -->
 {{ if or (eq $title "bloc") (eq $section "bloc") (in .URL "bloc_tags") }}
-	Bloc d'Arquitectura
+	Blog d'Arquitectura
 {{ end }}
