--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -43,7 +43,7 @@
 						</div>
 					{{ end }}
 
-					{{ if eq .Section .Site.Params.bloc_section }}
+					{{ if eq .Section .Site.Params.blog_section }}
 						<a name="comments"></a>
 						<hr />		
 						{{ template "_internal/disqus.html" . }}
