--- a/layouts/index.html
+++ b/layouts/index.html
@@ -59,7 +59,7 @@
 							{{ range first $.Site.Params.noticieshome ($taxonomy.Pages) }} 
 								<li>
 									<a href="{{ .Permalink }}" class="a-vermell">
-									{{ if eq .Section "bloc" }}
+									{{ if eq .Section "blog" }}
 										BLOG. 
 									{{ end }}
 									{{ .Title }}</a> ({{ .Date.Format "02-01-2006" }})
