--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -21,7 +21,7 @@
 	How to
 {{ end }}
 
-{{ if or (eq $title (.Site.Params.bloc_section | pluralize)) (eq $section .Site.Params.bloc_section) }}
+{{ if or (eq $title (.Site.Params.blog_section | pluralize)) (eq $section .Site.Params.blog_section) }}
 	Blog d'Arquitectura
 {{ end }}
 
@@ -37,6 +37,6 @@
 	Container Cloud
 {{ end }}
 
-{{ if in .URL "bloc_tags" }}
-	<a href="/bloc">Blog d'Arquitectura</a> > {{ .Title }} 
+{{ if in .URL "blog_tags" }}
+	<a href="/blog">Blog d'Arquitectura</a> > {{ .Title }} 
 {{end}}
