--- a/layouts/partials/section/categories.html
+++ b/layouts/partials/section/categories.html
@@ -1,5 +1,4 @@
-
-{{ if gt (len .Site.Taxonomies.bloc_tags) 0 }}
+{{ if gt (len .Site.Taxonomies.blog_tags) 0 }}
 
 	<div class="col-xs-12 col-sm-4">
 
@@ -16,8 +15,8 @@
 					
 					<div class="panel-body fons_blanc">
 						<ul class="llistat_enllacos_filet_cont list-group">
-						  {{ range $name, $taxonomy := .Site.Taxonomies.bloc_tags }}
-						    <li><a href="/bloc_tags/{{ $name | urlize }}">{{ lower (replace $name "-" " ") }} ({{len $taxonomy}})</a></li>
+						  {{ range $name, $taxonomy := .Site.Taxonomies.blog_tags }}
+						    <li><a href="/blog_tags/{{ $name | urlize }}">{{ lower (replace $name "-" " ") }} ({{len $taxonomy}})</a></li>
 						  {{ end }}
 						</ul>
 					</div>
