--- a/layouts/partials/comunicat/relacionats.html
+++ b/layouts/partials/comunicat/relacionats.html
@@ -3,7 +3,7 @@
     <table width="100%" border="0" cellspacing="0" cellpadding="0" align="left" class="content-news-text">
       <tr>
         <td class="relacionat_box">
-          <table width="100%" border="0" cellpadding="0" cellspacing="0" style="border:1px solid #ddd;background-color: #fff;">
+          <table width="100%" border="0" cellpadding="0" cellspacing="0" style="border:1px solid #ddd;background-color: #fff;margin-top: 20px;">
             <tr>
               <td class="content-text">
                 <table border="0" cellspacing="0" cellpadding="0">
