--- a/layouts/partials/breadcrumbs_subsection.html
+++ b/layouts/partials/breadcrumbs_subsection.html
@@ -1,5 +1,5 @@
-{{ $title := .Title | html | lower}}
-{{ $section := .Section | html | lower}}
+{{ $title := .Title | lower}}
+{{ $section := .Section | lower}}
 
 <!-- switch subseccions -->
 <!-- Canigó - documentació -->
