--- a/layouts/partials/header_block.html
+++ b/layouts/partials/header_block.html
@@ -1,5 +1,5 @@
-			{{ $title := .Title | lower}}
-			{{ $section := .Section | lower}}
+			{{ $title := .Title | html | lower}}
+			{{ $section := .Section | html | lower}}
 
 			<article class="bgGrey">
 				<div class="container">	
