L'amplada màxima de la gràfica del comunicat s'ha establert a 800px

--- a/layouts/partials/comunicat/grafica.html
+++ b/layouts/partials/comunicat/grafica.html
@@ -22,7 +22,7 @@
                           console.info('{{ $anymes }}');
                           console.info('{{ $imgurl }}');
                         </script>
-                        <img src="{{ $imgurl }}" alt="{{ .Params.grafica.alt }}" style="width: 100%" />
+                        <img src="{{ $imgurl }}" alt="{{ .Params.grafica.alt }}" style="width: 100%; max-width: 800px" />
                       </p>
                     </td>
                   </tr>
