--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,11 +23,7 @@
 		{{ partial "menu.html" . }}
 
 	</div>
-    <div>
-    	{{ if not .Lastmod.IsZero }}
-    	   Darrera actualització: {{ .Lastmod.Format "02-01-2006" }}
-        {{ end }}
-    </div>
+
 	<section class="border-start">
 
 		<article>
@@ -47,6 +43,12 @@
 
 
 		</article>
+
+		    <div>
+    	{{ if not .Lastmod.IsZero }}
+    	   <i><b>Darrera actualització:</b></i> {{ .Lastmod.Format "02-01-2006" }}
+        {{ end }}
+           </div>
 
 		<article class="padding-xs padding-sm padding-md">
 
