--- a/layouts/index.html
+++ b/layouts/index.html
@@ -44,11 +44,11 @@
 
 		</article>
 
-		    <div>
+		 <div class="padding-xs container">
     	{{ if not .Lastmod.IsZero }}
     	   <i><b>Darrera actualització:</b></i> {{ .Lastmod.Format "02-01-2006" }}
         {{ end }}
-           </div>
+         </div>
 
 		<article class="padding-xs padding-sm padding-md">
 
