--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -85,7 +85,7 @@
 			        	{{ range .Site.Menus.main }}
 
 						<li>
-							<a class="dropdown-toggle" href='{{Site.baseURL}}{{.URL}}' data-toggle='_dropdown'>{{ .Name }}</a>
+							<a class="dropdown-toggle" href='{{.Site.BaseURL}}{{.URL}}' data-toggle='_dropdown'>{{ .Name }}</a>
 						</li>
 
 						{{end}}
