Solucionem problemes de mixed content.

--- a/layouts/partials/comunicat/header.html
+++ b/layouts/partials/comunicat/header.html
@@ -6,7 +6,7 @@
           <table width="100%" border="0" cellpadding="0" cellspacing="0">
             <tr>
               <td align="left">
-                <img src="http://canigo.ctti.gencat.cat/images/comunicats/logo-generalitat.png" width="101" height="26" border="0" alt="" />
+                <img src="/images/comunicats/logo-generalitat.png" width="101" height="26" border="0" alt="" />
               </td>
             </tr>
             <tr>
