--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,22 +9,22 @@
 						<div id="fAvisLegal">
 							<div>
 								<div class="hidden-xs">
-									<a href="http://www.gencat.cat"> <img
+									<a href="https://www.gencat.cat"> <img
 										src="/img/logo_generalitat_gris.png_679097835.png"
 										width="101" height="27" alt="www.gencat.cat"
 										/></a>
 									<p>
-										<a title="Avis legal" href="http://web.gencat.cat/ca/menu-ajuda/ajuda/avis_legal/" target="_self">Avís legal</a>: La &copy; Generalitat de Catalunya permet la reutilització dels continguts i de les dades sempre que se citi la font i la data d'actualització, que no es desnaturalitzi la informació i que no es contradigui amb una llicència específica.
+										<a title="Avis legal" href="https://web.gencat.cat/ca/menu-ajuda/ajuda/avis_legal/" target="_self">Avís legal</a>: La &copy; Generalitat de Catalunya permet la reutilització dels continguts i de les dades sempre que se citi la font i la data d'actualització, que no es desnaturalitzi la informació i que no es contradigui amb una llicència específica.
 									</p>
 								</div>
 								<div class="visible-xs avis_legal">
 									<p>
-										<a title="Avis legal" href="http://web.gencat.cat/ca/menu-ajuda/ajuda/avis_legal/" target="_self">Avís legal</a>: La &copy; Generalitat de Catalunya permet la reutilització dels continguts i de les dades sempre que se citi la font i la data d'actualització, que no es desnaturalitzi la informació i que no es contradigui amb una llicència específica.
+										<a title="Avis legal" href="https://web.gencat.cat/ca/menu-ajuda/ajuda/avis_legal/" target="_self">Avís legal</a>: La &copy; Generalitat de Catalunya permet la reutilització dels continguts i de les dades sempre que se citi la font i la data d'actualització, que no es desnaturalitzi la informació i que no es contradigui amb una llicència específica.
 									</p>
 								</div>
 								
 								<div class="fi_peu visible-xs">
-									<a title="www.gencat.cat" href="http://www.gencat.cat"> <img
+									<a title="www.gencat.cat" href="https://www.gencat.cat"> <img
 										src="/img/logo_generalitat_gris.png_679097835.png"
 										width="101" height="27" 
 										alt="www.gencat.cat" /></a> <a class="torna_amunt pull-right"
