--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -46,7 +46,7 @@
 					<div class="row">
 						<div class="col-md-6 col-sm-4 column">
 							<a class="img-responsive logo" title="Generalitat de Catalunya"
-								href="http://ctti.gencat.cat/">gencat.cat</a>
+								href="https://ctti.gencat.cat/">gencat.cat</a>
 							<button class="menu_tancar visible-xs collapsed"
 								data-target=".navbar-collapse" data-toggle="collapse"
 								title="Tancar"></button>
