--- a/layouts/partials/comunicat/social-media.html
+++ b/layouts/partials/comunicat/social-media.html
@@ -5,7 +5,7 @@
     <table width="100%" cellspacing="0" class="shadow" style="border-collapse:collapse;border-spacing:0px;">
       <tr>
         <td style="padding: 0px">
-          <img src="http://canigo.ctti.gencat.cat/images/comunicats/shadow_bottom_footer.jpg" border="0" alt="">
+          <img src="/images/comunicats/shadow_bottom_footer.jpg" border="0" alt="">
         </td>
       </tr>
     </table>
@@ -31,7 +31,7 @@
               <td>
                 <table align="left" class="pl-15">
                   <tr>
-                    <td><img id="logo_bottom" src="http://canigo.ctti.gencat.cat/images/comunicats/logo-generalitat_gris.png" width="101px" height="26" border="0" alt="">
+                    <td><img id="logo_bottom" src="/images/comunicats/logo-generalitat_gris.png" width="101px" height="26" border="0" alt="">
                     </td>
                   </tr>
                 </table>
@@ -45,10 +45,10 @@
               <td>
                 <table align="left" style="margin-left: 20px; width:90%">
                   <tr>
-                    <td class="avis_legal"><strong style="color:#656565;"><a href="http://web.gencat.cat/ca/menu-ajuda/ajuda/avis_legal/" style="text-decoration: none;">Avís legal:</a></strong> La ©Generalitat de Catalunya permet la reutilizació de les dades sempre que se citi la font i la data d´actualizació, que no es desnaturalitzi la informació i que no es contradigui amb una llicència específica.</td>
+                    <td class="avis_legal"><strong style="color:#656565;"><a href="https://web.gencat.cat/ca/menu-ajuda/ajuda/avis_legal/" style="text-decoration: none;">Avís legal:</a></strong> La ©Generalitat de Catalunya permet la reutilizació de les dades sempre que se citi la font i la data d´actualizació, que no es desnaturalitzi la informació i que no es contradigui amb una llicència específica.</td>
                   </tr>
                   <tr>
-                  <td class="avis_legal" style="font-family:Open Sans, sans-serif; font-size: 10px; padding:0px; color:#656565;">Pot donar de baixa la seva subscripció a aquest butlletí accedint a <a href="http://butlletins.gencat.cat/pres_push/AppJava/subscribe.do" style="text-decoration: none;">aquest enllaç</a>.</td>
+                  <td class="avis_legal" style="font-family:Open Sans, sans-serif; font-size: 10px; padding:0px; color:#656565;">Pot donar de baixa la seva subscripció a aquest butlletí accedint a <a href="https://butlletins.gencat.cat/pres_push/AppJava/subscribe.do" style="text-decoration: none;">aquest enllaç</a>.</td>
                   </tr>
                 </table>
               </td>
@@ -62,7 +62,7 @@
                 <tr>
                 <td align="left">
                     <a href="#amunt">
-                    <img src="http://canigo.ctti.gencat.cat/images/comunicats/expanded.png" border="0" alt="">
+                    <img src="https://canigo.ctti.gencat.cat/images/comunicats/expanded.png" border="0" alt="">
                     </a>
                     <a style="font-family:Open Sans, sans-serif; font-size: 10px;padding: 0px 10px 0px 0px;color:#333;" href="#amunt">
                     <strong>AMUNT</strong>
