--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,7 +36,7 @@
 					</div>
 					<div class="bgTransRed">
 						<div class="container pos_relative">
-							<h1><span>{{ .Site.Params.titol }}</span></h1>
+							<h1><span>{{ .Site.Params.subtitol }}</span></h1>
 						</div>
 					</div>
 				</div>
