--- a/content/drafts/tableStyle.css
+++ b/content/drafts/tableStyle.css
@@ -1,7 +1,7 @@
 td.details-control {
-    background: url('../details_open.png') no-repeat center center;
+    background: url('./details_open.png') no-repeat center center;
     cursor: pointer;
 }
 tr.shown td.details-control {
-    background: url('../details_close.png') no-repeat center center;
+    background: url('./details_close.png') no-repeat center center;
 }
