--- a/content/drafts/tableStyle.css
+++ b/content/drafts/tableStyle.css
@@ -5,3 +5,7 @@ td.details-control {
 tr.shown td.details-control {
     background: url('../drafts/details_close.png') no-repeat center center;
 }
+
+.intern {
+font-weight: bold;
+}
