--- a/content/drafts/FullRuta20/tableStyle.css
+++ b/content/drafts/FullRuta20/tableStyle.css
@@ -6,6 +6,8 @@ tr.shown td.details-control {
     background: url('https://canigo.ctti.gencat.cat/drafts/FullRuta20/details_close.png') no-repeat center center;
 }
 
+div.container { max-width: 1200px }
+
 .intern {
 font-weight: bold;
 }
