S'havien perdut els títols a les notícies.

--- a/layouts/partials/header_block.html
+++ b/layouts/partials/header_block.html
@@ -96,7 +96,10 @@
 										{{ if or (eq $title "clouds") (eq $section "cloud") }}
 											Container Cloud
 										{{ end }}
-									
+                                                                                {{ if (eq .Section "noticies") }}
+                                                                                    {{ .Title }}
+                                                                                {{ end }}
+
 									{{ end }}
 								</h1>
 
