També faltaven els títols als howtos.

--- a/layouts/partials/header_block.html
+++ b/layouts/partials/header_block.html
@@ -99,7 +99,9 @@
                                                                                 {{ if (eq .Section "noticies") }}
                                                                                     {{ .Title }}
                                                                                 {{ end }}
-
+										{{ if (eq .Section "howtos") }}
+										    {{ .Title }}
+										{{ end }}
 									{{ end }}
 								</h1>
 
